fixed footer alignment

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -18,6 +18,14 @@
         margin: 0;
         background: $site-background;
 
+        .footer-button {
+            margin: auto;
+        };
+
+        .site-description {
+            margin: auto;
+        };
+
         button {
             background: $site-background;
             border: 1px solid;
